Add planning survey teaser.

--- a/index.html
+++ b/index.html
@@ -644,14 +644,16 @@
 <section id="contact">
     <div class="container wow fadeIn">
         <div class="row">
-            <div class="col-lg-12 text-center">
+            <div class="col-lg-8 col-lg-offset-2 text-center">
                 <h2>Contact Us</h2>
                 <hr class="colored">
-                <p>Interested in enrolling or helping the school develop? Please get in touch!</p>
+                <p>We're currently looking at real estate properties, demographics and initial classroom needs. Please take our planning survey to help us gauge interest. <br/><a class="btn btn-sm btn-primary" href="https://goo.gl/forms/IEyAXRq4vkB39B6v1" title="Take Survey"><span class="fa fa-bar-chart" aria-hidden="true"></span> Planning Survey</a></p>.
+
             </div>
         </div>
         <div class="row content-row">
             <div class="col-lg-8 col-lg-offset-2">
+                <p>Interested in enrolling or helping the school develop? Please get in touch!</p>
                 <form name="sentMessage" id="contactForm" novalidate>
                     <div class="row control-group">
                         <div class="form-group col-xs-12 floating-label-form-group controls">
@@ -759,7 +761,7 @@
                     <div class="col-md-8 col-md-offset-2">
                         <h2>Donate to our School</h2>
                         <hr class="colored">
-                        <p>As a free public charter school, there will be no tuition, however charter schools do not
+                        <p>As a free public charter school, there will be no tuition. However charter schools do not
                             receive funding equivalent to mainstream public schools. This leaves a funding gap we need
                             to fill.</p>
                         <p>We are accepting tax-deductible contributions now for the work we must do to pay lawyer fees,
