--- a/index.html
+++ b/index.html
@@ -610,7 +610,7 @@
     <div class="container text-center">
         <h3>Stay Connected</h3>
         <hr class="colored">
-        <p><span class="fa fa-facebook-square" aria-hidden="true"></span> Follow <a href="https://www.facebook.com/peacevalleywaldorf" title="Our Facebook Page">Peace Valley Charter School</a> on facebook for regular updates!</p>
+        <p><span class="fa fa-facebook-square" aria-hidden="true"></span> Follow <a href="https://www.facebook.com/boisewaldorf" title="Our Facebook Page">Peace Valley Charter School</a> on facebook for regular updates!</p>
         <p><span class="fa fa-envelope" aria-hidden="true"></span> Or for more infrequent updates sign up for our mailing list.</p>
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
@@ -727,7 +727,7 @@
         <div class="row social">
             <div class="col-lg-12">
                 <ul class="list-inline">
-                    <li><a href="https://www.facebook.com/peacevalleywaldorf" title="Peace Valley Facebook Page"><i
+                    <li><a href="https://www.facebook.com/boisewaldorf" title="Peace Valley Facebook Page"><i
                             class="fa fa-facebook fa-fw fa-2x"></i></a>
                     </li>
                     <li><a href="https://twitter.com/boisewaldorf" title="@boisewaldorf"><i
