Stronger survey teaser.

--- a/index.html
+++ b/index.html
@@ -641,18 +641,26 @@
 </section>
 
 <!-- Contact Section -->
-<section id="contact">
+<section id="survey" class="bg-gray">
     <div class="container wow fadeIn">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center">
-                <h2>Contact Us</h2>
+                <h2>Planning Survey</h2>
                 <hr class="colored">
-                <p>We're currently looking at real estate properties, demographics and initial classroom needs. Please take our planning survey to help us gauge interest. <br/><a class="btn btn-sm btn-primary" href="https://goo.gl/forms/IEyAXRq4vkB39B6v1" title="Take Survey"><span class="fa fa-bar-chart" aria-hidden="true"></span> Planning Survey</a></p>.
-
+                <p>We're currently looking at real estate properties, demographics and initial classroom needs. Please
+                    take our planning survey to help us gauge interest.</p>
+                <p><a class="btn btn-sm btn-primary" href="https://goo.gl/forms/IEyAXRq4vkB39B6v1" title="Take Survey"><span class="fa fa-bar-chart" aria-hidden="true"></span> Take Survey</a></p>
             </div>
         </div>
+    </div>
+</section>
+<!-- Contact Section -->
+<section id="contact">
+    <div class="container wow fadeIn">
         <div class="row content-row">
-            <div class="col-lg-8 col-lg-offset-2">
+            <div class="col-lg-8 col-lg-offset-2 text-center">
+                <h2>Contact Us</h2>
+                <hr class="colored">
                 <p>Interested in enrolling or helping the school develop? Please get in touch!</p>
                 <form name="sentMessage" id="contactForm" novalidate>
                     <div class="row control-group">
